Fix email address breaking out of container on small screens

--- a/themes/sherpa/styles/_sections.sass
+++ b/themes/sherpa/styles/_sections.sass
@@ -328,5 +328,7 @@ section
       width: 50%
       margin: 0 auto
     span
-      font-size: 2em
+      font-size: 1.5em
+      +breakpoint(medium)
+        font-size: 2em
       +text-gradient-fade(rainbow)
